examples/test/testpolicy13316.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13316
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key24: value24
      key12: value13
      key25: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value43
          key23: value46
      podSelector:
        matchLabels:
          key29: value28
          key27: value9
          key26: value47
